# glassbox

./: .gitignore  README.md  pyproject.toml
evals/: basic_eval.py  grader.py  test.txt
src/agent/: animation.py  coding_agent.py  context_manager.py  main.py  prompts.py  tools.py
src/agent/storage/: queries.py
tests/: test_main.py  test_resume.py  test_tools.py
