[project]
name = "glassbox"
version = "0.1.0"
description = "GlassBox — a transparent, provider-agnostic CLI coding assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "litellm==1.89.3",
    "rich>=14.3.3",
]

[project.scripts]
agent = "agent.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "scalene>=2.3.0",
]
